--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,19 +1,26 @@
 .header
-  &-logo
-   	backgrpund: url(../img/h-logo.png) center no-repeat
-   	background-size: 100%
-   	width: 191px
-   	height: 61px
-    padding: 15px 0
-  &-contacts
-    display: flex
-    justify-content: flex-end
-    align-items: center
-  &__phone
-    &s
-      display: flex
-      font-size: 22px
-      margin-right: 13px
-    &:first-child
-     	border-right: 1px solid #cfcfd0
-     	padding-right: 13px
+    &-logo
+        width: 191px
+        height: 61px
+        padding: 15px 0
+
+        background-size: 100%
+
+        backgrpund: url(../img/h-logo.png) center no-repeat
+    &-contacts
+        display: flex
+
+        justify-content: flex-end
+        align-items: center
+    &__phone
+        &s
+            font-size: 22px
+
+            display: flex
+
+            margin-right: 13px
+        &:first-child
+            padding-right: 13px;
+
+            border-right: 1px solid #cfcfd0
+
