--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -1,74 +1,96 @@
 .overlay
-	position: fixed
-	display: none
-	top: 0
-	width: 100%
-	height: 100%
-	z-index: 3
-	background-color: rgba (0,0,0,0.4)
-	.popup
-		position: fixed
-		left: 50%
-		top: 100px
-		width: 752px
-		transform: translateX(-50%)
-		&-close
-			position: absolute
-			right: -20px
-			top: -30px
-			font-size: 35px
-			color: #fff
-			font-weight: 300
-			cursor: pointer
-		&-title
-			display: block
-			width: 100%
-			max-height: 71px
-			margin: 0
-			background-color: #ff9d00
-			color: #fff
-			text-transform: uppercase
-			line-height: 71px
-			font-size: 21px
-			font-weight: 500
-			text-align: center
-		&-form
-			background: url(../img/form-bg.jpg) center no-repeat
-			background-size: cover
-			padding: 35px 88px 50px 88px
-			color: #fff
-			&-header
-				padding: 0
-				font-size: 30px
-				font-weight: 400
-				line-height: 27px
-				text-align: center
-				span
-					font-style: 24px
-			&__label
-				display: block
-				margin-top: 23px
-				font-size: 20px
-				font-weight: 300
-				line-height: 30px
-			&__input
-				width: 365px
-				height: 56px
-				margin-top: 17px
-			&__btn
-				width: 180px
-				height: 56px
-				margin-left: 16px
-				font-size: 15px
-				font-weight: 500
-				line-height: 22px
-				background-color: #ff9d00
-			&__note
-				margin-top: 9px
-				font-size: 14px
-				font-weight: 300
-				line-height: 30px
-				text-align: center
+    position: fixed
+    z-index: 3
+    top: 0
+
+    display: none
+
+    width: 100%
+    height: 100%
+
+    background-color: rgba (0,0,0,.4)
+    .popup
+        position: fixed
+        top: 100px
+        left: 50%
+
+        width: 752px
+
+        transform: translateX(-50%)
+        &-close
+            font-size: 35px
+            font-weight: 300
+
+            position: absolute
+            top: -30px
+            right: -20px
+
+            cursor: pointer
+
+            color: #fff
+        &-title
+            font-size: 21px
+            font-weight: 500
+            line-height: 71px
+
+            display: block
+
+            width: 100%
+            max-height: 71px
+            margin: 0
+
+            text-align: center
+            text-transform: uppercase
+
+            color: #fff
+            background-color: #ff9d00
+        &-form
+            padding: 35px 88px 50px 88px
+
+            color: #fff
+            background: url(../img/form-bg.jpg) center no-repeat
+            background-size: cover
+            &-header
+                font-size: 30px
+                font-weight: 400
+                line-height: 27px
+
+                padding: 0
+
+                text-align: center
+                span
+                    font-style: 24px
+                &__label
+                font-size: 20px
+                font-weight: 300
+                line-height: 30px
+
+                display: block
+
+                margin-top: 23px
+            &__input
+                width: 365px
+                height: 56px
+                margin-top: 17px
+            &__btn
+                font-size: 15px
+                font-weight: 500
+                line-height: 22px
+
+                width: 180px
+                height: 56px
+                margin-left: 16px
+
+                background-color: #ff9d00
+            &__note
+                font-size: 14px
+                font-weight: 300
+                line-height: 30px
+
+                margin-top: 9px
+
+                text-align: center
 
 
+                
 
