--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,70 +1,68 @@
 .main
- position: relative
- padding-top: 65px
- padding-bottom: 60px
- background: #373737 url(../img/bg-1.jpg) center no-repeat
- background-size: cover
- color: $text-color-light
- z-index: 2
- &::before 
-  content: ''
-  display: block 
-  position: absolute
-  left: 0
-  top: 0
-  width: 100%
-  height: 100%
-  background-color: rgba (0, 0, 0, 0.6)
-  z-index: 0
-
-  &-img
-   position: relative
-   &::before 
-   	content: ''
-   	position: absolute
-   	z-index: -1
-   	width: 390px
-   	height: 390px
-   	left: 50%
-   	margin-left: -195px
-   	border: 1px solid #fff
-   	border-radius: 50%
-   &-text 
-   	&__title
-   	 margin-bottom: 20px
-     font-style: 40px
-     font-weight: 700
-    &__subtitle 
-     margin-bottom: 27px
-     font-style: 28px
-     font-weight: 300
-    &__form
-     padding: 30px 27px
-     background-color: rgba(255, 255, 255, 0.2)
-    .form
-     display: flex
-     margin-bottom: 12px
-     &-title
-      margin-bottom: 20px
-      padding-right: 87px
-      font-size: 20px
-      font-weight: 300
-      line-height: 30px
-      &__important 
-       font-weight: 700
-       text-transform: uppercase
-       display: block
-     &__input
-      margin-right: 10px
-      padding: 20px
-      border-radius: 4px
-      border: none
-      vertical-align: middle
-      flex-basis: 50%
-     &-small
-      font-size: 14px
-      font-weight: 300
-
+    position: relative
+    z-index: 2
+    padding-top: 65px
+    padding-bottom: 60px
+    color: $text-color-light
+    background: #373737 url(../img/bg-1.jpg) center no-repeat
+    background-size: cover
+    &::before 
+        position: absolute
+        z-index: 0
+        top: 0
+        left: 0
+        display: block        
+        width: 100%
+        height: 100%
+        content: ''
+        background-color: rgba (0, 0, 0, .6)
+        &-img
+            position: relative
+            &::before 
+                position: absolute
+                z-index: -1
+                left: 50%
+                width: 390px
+                height: 390px
+                margin-left: -195px
+                content: ''
+                border: 1px solid #fff
+                border-radius: 50%
+            &-text 
+                &__title
+                    font-weight: 700
+                    font-style: 40px
+                    margin-bottom: 20px
+                &__subtitle 
+                    font-weight: 300
+                    font-style: 28px
+                    margin-bottom: 27px
+                &__form
+                    padding: 30px 27px
+                    background-color: rgba(255, 255, 255, .2)
+                .form
+                    display: flex
+                    margin-bottom: 12px
+                    &-title
+                        font-size: 20px
+                        font-weight: 300
+                        line-height: 30px
+                        margin-bottom: 20px
+                        padding-right: 87px
+                        &__important 
+                            font-weight: 700
+                            display: block
+                            text-transform: uppercase
+                        &__input
+                        margin-right: 10px
+                        padding: 20px
+                        vertical-align: middle
+                        border: none
+                        border-radius: 4px
+                        flex-basis: 50%
+                    &-small
+                        font-size: 14px
+                        font-weight: 300
 
 
 
@@ -72,4 +70,6 @@
 
 
 
+
+                        
 
