--- a/src/sass/_reset.sass
+++ b/src/sass/_reset.sass
@@ -1,7 +1,8 @@
 body
- margin: 0
+    margin: 0
 img
- max-width: 100%
-input, button
- &:focus
-  outline: none
+    max-width: 100%
+input,
+button
+    &:focus
+        outline: none;
