--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,26 +1,20 @@
 .header
-    &-logo
+    &__logo
         width: 191px
         height: 61px
         padding: 15px 0
-
         background-size: 100%
-
-        backgrpund: url(../img/h-logo.png) center no-repeat
+        background: url(../img/h-logo.png) center no-repeat
     &-contacts
         display: flex
-
         justify-content: flex-end
         align-items: center
-    &__phone
-        &s
-            font-size: 22px
-
-            display: flex
-
-            margin-right: 13px
-        &:first-child
-            padding-right: 13px;
-
-            border-right: 1px solid #cfcfd0
+        &__phone
+            &s
+                font-size: 22px
+                display: flex
+                margin-right: 13px
+            &:first-child
+                    margin-right: 13px;
+                    border-right: 1px solid #cfcfd0
 
