--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,26 +12,24 @@ input:focus,
 button:focus {
   outline: none; }
 
-.header-logo {
+.header__logo {
   width: 191px;
   height: 61px;
   padding: 15px 0;
   background-size: 100%;
-  backgrpund: url(../img/h-logo.png) center no-repeat; }
+  background: url(../img/h-logo.png) center no-repeat; }
 
 .header-contacts {
   display: flex;
   justify-content: flex-end;
   align-items: center; }
-
-.header__phones {
-  font-size: 22px;
-  display: flex;
-  margin-right: 13px; }
-
-.header__phone:first-child {
-  padding-right: 13px;
-  border-right: 1px solid #cfcfd0; }
+  .header-contacts__phones {
+    font-size: 22px;
+    display: flex;
+    margin-right: 13px; }
+  .header-contacts__phone:first-child {
+    margin-right: 13px;
+    border-right: 1px solid #cfcfd0; }
 
 .button {
   font-size: 14px;
@@ -67,52 +65,55 @@ button:focus {
     width: 100%;
     height: 100%;
     content: '';
-    background-color: rgba 0, 0, 0, 0.6; }
-    .main::before-img {
-      position: relative; }
-      .main::before-img::before {
-        position: absolute;
-        z-index: -1;
-        left: 50%;
-        width: 390px;
-        height: 390px;
-        margin-left: -195px;
-        content: '';
-        border: 1px solid #fff;
-        border-radius: 50%; }
-      .main::before-img-text__title {
-        font-weight: 700;
-        font-style: 40px;
-        margin-bottom: 20px; }
-      .main::before-img-text__subtitle {
-        font-weight: 300;
-        font-style: 28px;
-        margin-bottom: 27px; }
-      .main::before-img-text__form {
-        padding: 30px 27px;
-        background-color: rgba(255, 255, 255, 0.2); }
-      .main::before-img-text .form {
-        display: flex;
-        margin-bottom: 12px; }
-        .main::before-img-text .form-title {
-          font-size: 20px;
-          font-weight: 300;
-          line-height: 30px;
-          margin-bottom: 20px;
-          padding-right: 87px;
-          margin-right: 10px;
-          padding: 20px;
-          vertical-align: middle;
-          border: none;
-          border-radius: 4px;
-          flex-basis: 50%; }
-          .main::before-img-text .form-title__important {
-            font-weight: 700;
-            display: block;
-            text-transform: uppercase; }
-        .main::before-img-text .form-small {
-          font-size: 14px;
-          font-weight: 300; }
+    background-color: rgba(0, 0, 0, 0.6); }
+  .main-img {
+    position: relative; }
+    .main-img::before {
+      position: absolute;
+      z-index: -1;
+      left: 50%;
+      width: 390px;
+      height: 390px;
+      margin-left: -195px;
+      content: '';
+      border: 1px solid #fff;
+      border-radius: 50%; }
+  .main-text__title {
+    font-weight: 700;
+    font-size: 40px;
+    margin-bottom: 20px; }
+  .main-text__subtitle {
+    font-weight: 300;
+    font-size: 28px;
+    margin-bottom: 27px; }
+  .main-text__form {
+    padding: 30px 27px;
+    background-color: rgba(255, 255, 255, 0.2); }
+
+.form {
+  display: flex;
+  margin-bottom: 12px; }
+  .form-title {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 30px;
+    margin-bottom: 20px;
+    padding-right: 87px; }
+    .form-title__important {
+      font-weight: 700;
+      display: block;
+      text-transform: uppercase; }
+  .form__input {
+    margin-right: 10px;
+    padding: 20px;
+    vertical-align: middle;
+    border: none;
+    border-radius: 4px;
+    flex-basis: 50%; }
+  .form-small {
+    font-size: 14px;
+    font-weight: 300;
+    padding-left: 19px; }
 
 .overlay {
   position: fixed;
