--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -15,54 +15,55 @@
         width: 100%
         height: 100%
         content: ''
-        background-color: rgba (0, 0, 0, .6)
-        &-img
-            position: relative
-            &::before 
-                position: absolute
-                z-index: -1
-                left: 50%
-                width: 390px
-                height: 390px
-                margin-left: -195px
-                content: ''
-                border: 1px solid #fff
-                border-radius: 50%
-            &-text 
-                &__title
-                    font-weight: 700
-                    font-style: 40px
-                    margin-bottom: 20px
-                &__subtitle 
-                    font-weight: 300
-                    font-style: 28px
-                    margin-bottom: 27px
-                &__form
-                    padding: 30px 27px
-                    background-color: rgba(255, 255, 255, .2)
-                .form
-                    display: flex
-                    margin-bottom: 12px
-                    &-title
-                        font-size: 20px
-                        font-weight: 300
-                        line-height: 30px
-                        margin-bottom: 20px
-                        padding-right: 87px
-                        &__important 
-                            font-weight: 700
-                            display: block
-                            text-transform: uppercase
-                        &__input
-                        margin-right: 10px
-                        padding: 20px
-                        vertical-align: middle
-                        border: none
-                        border-radius: 4px
-                        flex-basis: 50%
-                    &-small
-                        font-size: 14px
-                        font-weight: 300
+        background-color: rgba(0,0,0,0.6)
+    &-img
+        position: relative
+        &::before 
+            position: absolute
+            z-index: -1
+            left: 50%
+            width: 390px
+            height: 390px
+            margin-left: -195px
+            content: ''
+            border: 1px solid #fff
+            border-radius: 50%
+    &-text 
+        &__title
+            font-weight: 700
+            font-size: 40px
+            margin-bottom: 20px
+        &__subtitle 
+            font-weight: 300
+            font-size: 28px
+            margin-bottom: 27px
+        &__form
+            padding: 30px 27px
+            background-color: rgba(255, 255, 255, .2)
+.form
+    display: flex
+    margin-bottom: 12px
+    &-title
+        font-size: 20px
+        font-weight: 300
+        line-height: 30px
+        margin-bottom: 20px
+        padding-right: 87px
+        &__important 
+            font-weight: 700
+            display: block
+            text-transform: uppercase
+    &__input
+        margin-right: 10px
+        padding: 20px
+        vertical-align: middle
+        border: none
+        border-radius: 4px
+        flex-basis: 50%
+    &-small
+        font-size: 14px
+        font-weight: 300
+        padding-left: 19px
 
 
 
