new pool for header

--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,4 +1,5 @@
 .header
+    margin: 20px 0 20px 0
     &__logo
         width: 191px
         height: 61px
@@ -11,10 +12,9 @@
         align-items: center
         &__phone
             &s
-                font-size: 22px
-                display: flex
-                margin-right: 13px
-            &:first-child
-                    margin-right: 13px;
-                    border-right: 1px solid #cfcfd0
-
+            font-size: 22px
+            display: flex
+            margin-right: 13px
+            &s:first-child
+            margin-right: 13px
+            border-right: 1px solid #cfcfd0
