--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,24 +12,24 @@ input:focus,
 button:focus {
   outline: none; }
 
-.header__logo {
-  width: 191px;
-  height: 61px;
-  padding: 15px 0;
-  background-size: 100%;
-  background: url(../img/h-logo.png) center no-repeat; }
-
-.header-contacts {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center; }
-  .header-contacts__phones {
-    font-size: 22px;
+.header {
+  margin: 20px 0 20px 0; }
+  .header__logo {
+    width: 191px;
+    height: 61px;
+    padding: 15px 0;
+    background-size: 100%;
+    background: url(../img/h-logo.png) center no-repeat; }
+  .header-contacts {
     display: flex;
-    margin-right: 13px; }
-  .header-contacts__phone:first-child {
-    margin-right: 13px;
-    border-right: 1px solid #cfcfd0; }
+    justify-content: flex-end;
+    align-items: center; }
+    .header-contacts__phone {
+      font-size: 22px;
+      display: flex;
+      margin-right: 13px;
+      margin-right: 13px;
+      border-right: 1px solid #cfcfd0; }
 
 .button {
   font-size: 14px;
@@ -122,7 +122,7 @@ button:focus {
   display: none;
   width: 100%;
   height: 100%;
-  background-color: rgba 0, 0, 0, 0.4; }
+  background-color: rgba(0, 0, 0, 0.4); }
   .overlay .popup {
     position: fixed;
     top: 100px;
