fixed form's closing

--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -14,7 +14,6 @@
             &s
             font-size: 22px
             display: flex
-            margin-right: 13px
-            &s:first-child
-            margin-right: 13px
-            border-right: 1px solid #cfcfd0
+            &:first-child
+                margin-right: 13px
+                border-right: 1px solid #cfcfd0
