--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,10 +26,10 @@ button:focus {
     align-items: center; }
     .header-contacts__phone {
       font-size: 22px;
-      display: flex;
-      margin-right: 13px;
-      margin-right: 13px;
-      border-right: 1px solid #cfcfd0; }
+      display: flex; }
+      .header-contacts__phone:first-child {
+        margin-right: 13px;
+        border-right: 1px solid #cfcfd0; }
 
 .button {
   font-size: 14px;
@@ -122,7 +122,7 @@ button:focus {
   display: none;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.4); }
+  background-color: rgba(0, 0, 0, 0.6); }
   .overlay .popup {
     position: fixed;
     top: 100px;
