--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -5,7 +5,7 @@
     display: none
     width: 100%
     height: 100%
-    background-color: rgba(0,0,0,.4)
+    background-color: rgba(0,0,0,0.6)
     .popup
         position: fixed
         top: 100px
