--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -14,6 +14,6 @@
             &s
             font-size: 22px
             display: flex
-            &:first-child
-                margin-right: 13px
-                border-right: 1px solid #cfcfd0
+        &__button
+            margin-left: 15px
+           
