--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,11 +1,11 @@
 .header
     margin: 20px 0 20px 0
-    &__logo
+    &-logo
+        background: url(../img/h-logo.png) center no-repeat
+        background-size: 100%
         width: 191px
         height: 61px
         padding: 15px 0
-        background-size: 100%
-        background: url(../img/h-logo.png) center no-repeat
     &-contacts
         display: flex
         justify-content: flex-end
@@ -16,4 +16,5 @@
             display: flex
         &__button
             margin-left: 15px
+
            
