--- a/src/css/style.css
+++ b/src/css/style.css
@@ -126,7 +126,7 @@ button:focus {
     position: fixed;
     top: 100px;
     left: 50%;
-    width: 752px;
+    width: 60%;
     transform: translateX(-50%); }
     .overlay .popup-close {
       font-size: 35px;
@@ -137,12 +137,11 @@ button:focus {
       cursor: pointer;
       color: #fff; }
     .overlay .popup-title {
-      font-size: 21px;
+      font-size: 1.2em;
       font-weight: 500;
-      line-height: 71px;
+      line-height: 2em;
       display: block;
       width: 100%;
-      max-height: 71px;
       margin: 0;
       text-align: center;
       text-transform: uppercase;
@@ -154,7 +153,7 @@ button:focus {
       background: url(../img/form-bg.jpg) center no-repeat;
       background-size: cover; }
       .overlay .popup-form-header {
-        font-size: 30px;
+        font-size: 1em;
         font-weight: 400;
         line-height: 27px;
         padding: 0;
@@ -164,20 +163,21 @@ button:focus {
         line-height: 30px;
         display: block;
         margin-top: 23px; }
-        .overlay .popup-form-header span {
-          font-style: 24px; }
-      .overlay .popup-form__input {
-        width: 365px;
-        height: 56px;
-        margin-top: 17px; }
-      .overlay .popup-form__btn {
-        font-size: 15px;
-        font-weight: 500;
-        line-height: 22px;
-        width: 180px;
-        height: 56px;
-        margin-left: 16px;
-        background-color: #ff9d00; }
+      .overlay .popup-form__inputs {
+        display: flex;
+        align-items: center;
+        margin-top: 15px; }
+        .overlay .popup-form__inputs__input {
+          width: 60%;
+          height: 56px; }
+        .overlay .popup-form__inputs__btn {
+          font-size: 15px;
+          font-weight: 500;
+          line-height: 16px;
+          width: 30%;
+          height: 56px;
+          margin-left: 16px;
+          background-color: #ff9d00; }
       .overlay .popup-form__note {
         font-size: 14px;
         font-weight: 300;
@@ -222,6 +222,16 @@ button:focus {
       line-height: 1.4;
       padding-right: 0; }
     .form__input {
-      display: block;
+      margin-top: 10px;
       margin-left: 15px;
-      margin-bottom: 13px; } }
+      margin-bottom: 13px; }
+  .overlay .popup-form {
+    padding: 10px 20px 10px 20px; }
+    .overlay .popup-form__inputs {
+      display: flex;
+      flex-direction: column; }
+      .overlay .popup-form__inputs__input {
+        width: 80%;
+        margin-bottom: 20px; }
+      .overlay .popup-form__inputs__btn {
+        width: 50%; } }
