--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -37,8 +37,30 @@
             line-height: 1.4
             padding-right: 0
         &__input
-            display: block
+            margin-top: 10px
             margin-left: 15px
             margin-bottom: 13px
+    .overlay
+        .popup
+            &-form
+                padding: 10px 20px 10px 20px
+                &__inputs
+                    display: flex
+                    flex-direction: column
+                    &__input
+                        width: 80%
+                        margin-bottom: 20px
+                    &__btn
+                        width: 50%
+
+                     
+                    
+     
+     
+          
+                    
+
+       
+
 
 
