--- a/src/sass/_modal.sass
+++ b/src/sass/_modal.sass
@@ -10,7 +10,7 @@
         position: fixed
         top: 100px
         left: 50%
-        width: 752px
+        width: 60%
         transform: translateX(-50%)
         &-close
             font-size: 35px
@@ -21,12 +21,11 @@
             cursor: pointer
             color: #fff
         &-title
-            font-size: 21px
+            font-size: 1.2em
             font-weight: 500
-            line-height: 71px
+            line-height: 2em
             display: block
-            width: 100%
-            max-height: 71px
+            width: 100%            
             margin: 0
             text-align: center
             text-transform: uppercase
@@ -38,31 +37,32 @@
             background: url(../img/form-bg.jpg) center no-repeat
             background-size: cover
             &-header
-                font-size: 30px
+                font-size: 1em
                 font-weight: 400
                 line-height: 27px
                 padding: 0
                 text-align: center
-                span
-                    font-style: 24px
                 &__label
                 font-size: 20px
                 font-weight: 300
                 line-height: 30px
                 display: block
                 margin-top: 23px
-            &__input
-                width: 365px
-                height: 56px
-                margin-top: 17px
-            &__btn
-                font-size: 15px
-                font-weight: 500
-                line-height: 22px
-                width: 180px
-                height: 56px
-                margin-left: 16px
-                background-color: #ff9d00
+            &__inputs
+                display: flex
+                align-items: center
+                margin-top: 15px
+                &__input
+                    width: 60%
+                    height: 56px
+                &__btn
+                    font-size: 15px
+                    font-weight: 500
+                    line-height: 16px
+                    width: 30%
+                    height: 56px
+                    margin-left: 16px
+                    background-color: #ff9d00
             &__note
                 font-size: 14px
                 font-weight: 300
