--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -6,25 +6,25 @@
     color: $text-color-light
     background: #373737 url(../img/bg-1.jpg) center no-repeat
     background-size: cover
-    &::before 
+    &::before
+        content: ''
+        display: block
         position: absolute
-        z-index: 0
+        right: 0
         top: 0
-        left: 0
-        display: block        
         width: 100%
         height: 100%
-        content: ''
-        background-color: rgba(0,0,0,0.6)
+        background: rgba(0,0,0,0.6)
+        z-index: 0
     &-img
         position: relative
         &::before 
             position: absolute
             z-index: -1
             left: 50%
-            width: 390px
-            height: 390px
-            margin-left: -195px
+            width: 250px
+            height: 250px
+            margin-left: -110px
             content: ''
             border: 1px solid #fff
             border-radius: 50%
@@ -59,7 +59,8 @@
         vertical-align: middle
         border: none
         border-radius: 4px
-        flex-basis: 50%
+        flex-basis: 100%
+        max-width: 365px
     &-small
         font-size: 14px
         font-weight: 300
