--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -1,4 +1,14 @@
-@media (max-width: 700px)
+@media (≥992px)
+    .main
+        &-img
+            &::before       
+                width: 270px
+                height: 270px
+                margin-left: -195px
+                content: ''
+                border: 1px solid #fff
+
+@media (max-width: 768px)
     .hidden-mobile
         display: none
     .header
@@ -29,7 +39,18 @@
                 margin-bottom: 40px
             &__form
                 padding: 10px
-                backgroundcolor: transparent
+                backgroundcolor: transparent                      
+        &-img
+            &::before 
+                position: absolute
+                z-index: -1
+                left: 50%
+                width: 390px
+                height: 390px
+                margin-left: -195px
+                content: ''
+                border: 1px solid #fff
+                border-radius: 50%       
     .form
         display: block
         &-title
@@ -52,6 +73,59 @@
                         margin-bottom: 20px
                     &__btn
                         width: 50%
+
+@media (min-width: 576px) and (max-width: 768px)
+    .numbers
+        margin-bottom: 37px
+        &-block
+            &__title
+                font-size: 21px
+                font-weight: 700
+                sup
+                    font-size: 18px
+            &__text
+                font-size: 14px
+    .features
+        &-blocks
+            display: flex
+            flex-direction: column
+            flex-wrap: wrap
+            padding-top: 55px
+    .products
+        padding-bottom: 43px
+        &-block       
+            margin-bottom: 25px
+            &__title
+                margin-top: 10px
+                margin-bottom: 15px
+                font-size: 16px
+            &__button
+                margin-right: 0
+    .production
+        display: flex
+        flex-direction: column
+        padding: 
+            top: 57px
+            bottom: 50px
+        &-text
+            &__title
+                font-size: 21px
+                padding-left: 30px
+                padding-top: 20px
+                padding-bottom: 16px
+                margin-top: 19px
+                margin-bottom: 28px
+            &__descr
+                font-size: 14px
+                line-height: 22px
+          
+@media (min-width: 320px) and (max-width: 576px)
+    .features
+        &-blocks
+            flex-direction: column
+            flex-wrap: wrap
+            padding-top: 40px
+ 
 
                      
                     
