--- a/src/sass/_production.sass
+++ b/src/sass/_production.sass
@@ -10,3 +10,24 @@
 			padding-right: 30px
 			img
 				margin: 0 6px
+	&-text
+		max-width: 379px
+		&__title
+			color: $text-color-light
+			background-color: $active-color
+			font-size: 28px
+			font-weight: 300
+			width: 110%
+			transform: translate(-30px)
+			padding-left: 30px
+			padding-top: 20px
+			padding-bottom: 16px
+			margin-top: 19px
+			margin-bottom: 28px
+		&__descr
+			font-size: 16px
+			font-weight: 300
+			line-height: 24px
+			text-align: justify
+			
+
