--- a/src/css/style.css
+++ b/src/css/style.css
@@ -270,147 +270,6 @@ button:focus {
         margin-top: 9px;
         text-align: center; }
 
-@media (≥992px) {
-  .main-img::before {
-    width: 270px;
-    height: 270px;
-    margin-left: -195px;
-    content: '';
-    border: 1px solid #fff; } }
-
-@media (max-width: 768px) {
-  .hidden-mobile {
-    display: none; }
-  .header-logo {
-    background: #fd9c28 url(../img/header-logo__mobile.png) center no-repeat;
-    width: 35px;
-    height: 35px;
-    border-radius: 4px; }
-  .header-contacts {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; }
-    .header-contacts__phone {
-      display: block; }
-    .header-contacts__phones {
-      font-size: 14px;
-      font-color: #fff;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column; }
-    .header-contacts__button {
-      padding: 9px; }
-  .main {
-    padding-top: 30px;
-    text-align: center; }
-    .main-text__title {
-      font-size: 22px;
-      color: #fd9c28; }
-    .main-text__subtitle {
-      font-size: 18px;
-      margin-bottom: 40px; }
-    .main-text__form {
-      padding: 10px;
-      backgroundcolor: transparent; }
-    .main-img::before {
-      position: absolute;
-      z-index: -1;
-      left: 50%;
-      width: 390px;
-      height: 390px;
-      margin-left: -195px;
-      content: '';
-      border: 1px solid #fff;
-      border-radius: 50%; }
-  .form {
-    display: block; }
-    .form-title {
-      font-size: 15px;
-      line-height: 1.4;
-      padding-right: 0; }
-    .form__input {
-      margin-top: 10px;
-      margin-left: 15px;
-      margin-bottom: 13px; }
-  .overlay .popup-form {
-    padding: 10px 20px 10px 20px; }
-    .overlay .popup-form__inputs {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column; }
-      .overlay .popup-form__inputs__input {
-        width: 80%;
-        margin-bottom: 20px; }
-      .overlay .popup-form__inputs__btn {
-        width: 50%; } }
-
-@media (min-width: 576px) and (max-width: 768px) {
-  .numbers {
-    margin-bottom: 37px; }
-    .numbers-block__title {
-      font-size: 21px;
-      font-weight: 700; }
-      .numbers-block__title sup {
-        font-size: 18px; }
-    .numbers-block__text {
-      font-size: 14px; }
-  .features-blocks {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    padding-top: 55px; }
-  .products {
-    padding-bottom: 43px; }
-    .products-block {
-      margin-bottom: 25px; }
-      .products-block__title {
-        margin-top: 10px;
-        margin-bottom: 15px;
-        font-size: 16px; }
-      .products-block__button {
-        margin-right: 0; }
-  .production {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    padding-top: 57px;
-    padding-bottom: 50px; }
-    .production-text__title {
-      font-size: 21px;
-      padding-left: 30px;
-      padding-top: 20px;
-      padding-bottom: 16px;
-      margin-top: 19px;
-      margin-bottom: 28px; }
-    .production-text__descr {
-      font-size: 14px;
-      line-height: 22px; } }
-
-@media (min-width: 320px) and (max-width: 576px) {
-  .features-blocks {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    padding-top: 40px; } }
-
 .features {
   background-color: #f4f4f4;
   padding-top: 49px; }
@@ -557,3 +416,201 @@ button:focus {
     margin-bottom: 12px; }
   .offer-form__button {
     margin-bottom: 9px; }
+
+@media (≥992px) {
+  .main-img::before {
+    width: 270px;
+    height: 270px;
+    margin-left: -195px;
+    content: '';
+    border: 1px solid #fff; } }
+
+@media (max-width: 768px) {
+  .hidden-mobile {
+    display: none; }
+  .header-logo {
+    background: #fd9c28 url(../img/header-logo__mobile.png) center no-repeat;
+    width: 35px;
+    height: 35px;
+    border-radius: 4px; }
+  .header-contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .header-contacts__phone {
+      display: block; }
+    .header-contacts__phones {
+      font-size: 14px;
+      font-color: #fff;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+    .header-contacts__button {
+      padding: 9px; }
+  .main {
+    padding-top: 30px;
+    text-align: center; }
+    .main-text__title {
+      font-size: 22px;
+      color: #fd9c28; }
+    .main-text__subtitle {
+      font-size: 18px;
+      margin-bottom: 40px; }
+    .main-text__form {
+      padding: 10px;
+      backgroundcolor: transparent; }
+    .main-img::before {
+      position: absolute;
+      z-index: -1;
+      left: 50%;
+      width: 390px;
+      height: 390px;
+      margin-left: -195px;
+      content: '';
+      border: 1px solid #fff;
+      border-radius: 50%; }
+  .form {
+    display: block; }
+    .form-title {
+      font-size: 15px;
+      line-height: 1.4;
+      padding-right: 0; }
+    .form__input {
+      margin-top: 10px;
+      margin-left: 15px;
+      margin-bottom: 13px; }
+  .overlay .popup-form {
+    padding: 10px 20px 10px 20px; }
+    .overlay .popup-form__inputs {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column; }
+      .overlay .popup-form__inputs__input {
+        width: 80%;
+        margin-bottom: 20px; }
+      .overlay .popup-form__inputs__btn {
+        width: 50%; } }
+
+@media (min-width: 576px) and (max-width: 768px) {
+  .numbers {
+    margin-bottom: 37px; }
+    .numbers-block__title {
+      font-size: 26px;
+      font-weight: 700; }
+      .numbers-block__title sup {
+        font-size: 18px; }
+    .numbers-block__text {
+      font-size: 14px; }
+  .features-blocks {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding-top: 55px; }
+  .section-title {
+    font-size: 21px; }
+  .products {
+    padding-bottom: 43px; }
+    .products-block {
+      margin-bottom: 25px; }
+      .products-block__title {
+        margin-top: 10px;
+        margin-bottom: 15px;
+        font-size: 16px; }
+      .products-block__button {
+        margin-right: 0; }
+  .button-o {
+    margin-bottom: 15px; }
+  .production {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    padding-top: 57px;
+    padding-bottom: 50px; }
+    .production-text__title {
+      font-size: 21px;
+      padding-left: 30px;
+      padding-top: 20px;
+      padding-bottom: 16px;
+      margin-top: 19px;
+      margin-bottom: 28px; }
+    .production-text__descr {
+      font-size: 14px;
+      line-height: 22px; }
+  .offer-title {
+    font-size: 21px; }
+    .offer-title_small {
+      font-size: 16px; }
+  .offer-form__label {
+    font-size: 16px; }
+  .offer-form__input {
+    margin-left: 28%; }
+  .production-text__title {
+    font-size: 21px; }
+  .feedback {
+    padding-top: 35px;
+    padding-bottom: 36px; } }
+
+@media (min-width: 320px) and (max-width: 576px) {
+  .features-blocks {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    padding-top: 40px; }
+  .products {
+    flx-direction: column; }
+  .numbers {
+    margin-bottom: 25px; }
+    .numbers-block__title {
+      font-size: 18px;
+      font-weight: 600; }
+      .numbers-block__title sup {
+        font-size: 14px; }
+    .numbers-block__text {
+      font-size: 14px; }
+  .products {
+    padding-bottom: 43px; }
+    .products-block {
+      margin-bottom: 25px; }
+      .products-block__title {
+        font-size: 16px; }
+      .products-block__button {
+        margin-right: 0;
+        margin-bottom: 15px; }
+  .section-title {
+    font-size: 18px; }
+  .offer-title {
+    font-size: 18px; }
+    .offer-title_small {
+      font-size: 14px; }
+  .offer-form__label {
+    font-size: 14px; }
+  .offer-form__input {
+    margin-left: 15%;
+    font-size: 14px; }
+  .production {
+    padding-bottom: 40px; }
+    .production-text__title {
+      font-size: 18px; }
+    .production-text__descr {
+      font-size: 14px; }
+  .feedback {
+    padding-top: 35px;
+    padding-bottom: 36px; } }
