--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -79,7 +79,7 @@
         margin-bottom: 37px
         &-block
             &__title
-                font-size: 21px
+                font-size: 26px
                 font-weight: 700
                 sup
                     font-size: 18px
@@ -91,6 +91,8 @@
             flex-direction: column
             flex-wrap: wrap
             padding-top: 55px
+    .section-title
+        font-size: 21px
     .products
         padding-bottom: 43px
         &-block       
@@ -101,6 +103,8 @@
                 font-size: 16px
             &__button
                 margin-right: 0
+    .button-o
+        margin-bottom: 15px
     .production
         display: flex
         flex-direction: column
@@ -118,13 +122,75 @@
             &__descr
                 font-size: 14px
                 line-height: 22px
-          
-@media (min-width: 320px) and (max-width: 576px)
+    .offer
+        &-title
+            font-size: 21px
+            &_small
+                font-size: 16px
+        &-form
+            &__label
+                font-size: 16px
+            &__input               
+                margin-left: 28%
+    .production
+        &-text
+            &__title
+                font-size: 21px
+    .feedback
+        padding-top: 35px
+        padding-bottom: 36px
+      
+@media (min-width: 320px) and (max-width: 576px)    
     .features
         &-blocks
             flex-direction: column
             flex-wrap: wrap
             padding-top: 40px
+    .products
+        flx-direction: column
+    .numbers
+        margin-bottom: 25px
+        &-block
+            &__title
+                font-size: 18px
+                font-weight: 600
+                sup
+                    font-size: 14px
+            &__text
+                font-size: 14px
+    .products
+        padding-bottom: 43px
+        &-block       
+            margin-bottom: 25px
+            &__title
+                font-size: 16px
+            &__button
+                margin-right: 0
+                margin-bottom: 15px
+    .section-title
+        font-size: 18px
+    .offer
+        &-title
+            font-size: 18px
+            &_small
+                font-size: 14px
+        &-form
+            &__label
+                font-size: 14px
+            &__input               
+                margin-left: 15%
+                font-size: 14px
+    .production
+        padding:             
+            bottom: 40px
+        &-text
+            &__title
+                font-size: 18px
+            &__descr
+                font-size: 14px
+    .feedback
+        padding-top: 35px
+        padding-bottom: 36px
  
 
                      
